# rust4lab

./: .env  .gitattributes  .gitignore  Cargo.toml  chat.db
src/: db.rs  main.rs
static/: index.html  script.js  style.css
