[package]
name = "app_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenv = "0.15"
futures-util = "0.3"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
serde_json = "1.0.133"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }

